@@ -105,6 +105,8 @@ $_lang["configcheck_lang_difference"] = 'incorrect number of entries in language
 $_lang["configcheck_lang_difference_msg"] = 'The currently selected language has a different number of entries than the default language. While not necessarily a problem, this may mean the language file needs to be updated.';
 $_lang["configcheck_notok"] = 'One or more configuration details didn\'t check out OK: ';
 $_lang["configcheck_ok"] = 'Check passed OK - no warnings to report.';
+$_lang["configcheck_register_globals"] = 'register_globals is set to ON in your php.ini configuration file';
+$_lang["configcheck_register_globals_msg"] = 'This configuration makes your site much more susceptible to Cross Site Scripting (XSS) attacks. You should speak to your host about what you can do to disable this setting.';
 $_lang["configcheck_title"] = 'Configuration check';
 $_lang["configcheck_warning"] = 'Configuration warning:';
 $_lang["configcheck_what"] = 'What does this mean?';
